[package]
name = "memcontext"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "A reliable LLM context management engine."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/memcontext"
keywords = ["ai", "llm", "context", "memory"]

[dependencies]
