[package]
name = "memcontext"
version = "0.3.5"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "A reliable LLM context management engine."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/memcontext"
keywords = ["ai", "llm", "context", "memory"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
once_cell = "1.21.4"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
